---
config:
  theme: neutral
---
classDiagram
    class Signal {
        <<frozen>>
        - id: number
        - name: string
        - data: any
        - source: string
        - time: Date
        + Signal (id: number, name: string, data: any, source: string, time: Date)
    }
    class SignalBroker {
        + register(signalName: string) SignalTrigger
        + subscribe(signalName: string, action: SignalConsumer) SubscriptionToken
        + unsubscribe(token: SubscriptionToken) void
    }
    class SignalSubscription {
        <<frozen>>
        + id: number
        + signalName: string
        + action: SignalConsumer
        + equals(other: SignalSubscription) boolean
    }
    class SubscriptionToken {
        <<frozen>>
        + id: number
        + signalName: string
    }
    class SignalTrigger {
        + fire(data: any, source: any)
    }
    class FireRequest {
        <<frozen>>
        + data: any
        + source: string
    }
    class SignalConsumer {
        <<callback>>
        + call(signal: Signal) void
    }

    SignalBroker ..> SignalSubscription
    SignalBroker ..> SignalTrigger
    SignalBroker ..> SignalConsumer
    SignalBroker ..> SubscriptionToken
    SignalBroker ..> FireRequest
    SignalSubscription ..> SignalConsumer
    SignalConsumer ..> Signal
